<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/produitTitre"
        android:text="@string/nomProduit"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RatingBar
        android:id="@+id/editNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:stepSize="1" />

    <TextView
        android:layout_marginTop="10dp"
        android:text="@string/Commentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editCommentaire"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minLines="3"
        android:gravity="top|start"
        android:hint="@string/VotreAvis" />
</LinearLayout>
