<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF">

    <!-- Barre du Haut -->
    <View
        android:id="@+id/topPanel"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/purple_50"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/topAppBar"
        layout="@layout/client_top_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/topPanel" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintBottom_toTopOf="@id/include">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Section Paiement -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/methodePaiement"
                android:textStyle="bold"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorcartes"
                android:padding="16dp">

                <TextView
                    android:id="@+id/TVcarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/carteEx"/>


                <Button
                    android:id="@+id/carte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choisirAutreCarte"
                    android:backgroundTint="@android:color/transparent"
                    android:textColor="#6200EE"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>

            <!-- Section Adresse -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/adressePaiement"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/colorcartes"
                android:padding="16dp">

                <TextView
                    android:id="@+id/TVadresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/adresseEx"/>

                <Button
                    android:id="@+id/adresse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choisirAutreAdresse"
                    android:backgroundTint="@android:color/transparent"
                    android:textColor="#6200EE"
                    android:layout_marginTop="8dp"/>
            </LinearLayout>

            <!-- Code promotion -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/promoPaiement"
                android:textStyle="bold"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"/>

            <EditText
                android:id="@+id/code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/promoCode"
                android:background="@color/colorcartes"
                android:padding="16dp"/>

            <!-- Bouton Valider -->
            <Button
                android:id="@+id/validerPayer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validerPaiement"
                android:backgroundTint="#6200EE"
                android:textColor="#FFFFFF"
                android:layout_marginTop="24dp"/>
        </LinearLayout>
    </ScrollView>

    <!-- Barre du bas -->
    <include
        android:id="@+id/include"
        layout="@layout/client_bottom_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomPanel" />

    <View
        android:id="@+id/bottomPanel"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:background="@color/purple_50"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>